--- a/poster.tex
+++ b/poster.tex
@@ -1,24 +1,26 @@
-% Unofficial University Bremen Poster template.
-\documentclass[a0paper, dvipsnames]{beamer}
+% Gemini theme
+% https://github.com/anishathalye/gemini
+
+\documentclass[final]{beamer}
 
 % ====================
 % Packages
 % ====================
+
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
-\usepackage[size=a0paper, orientation=portrait, width=122, height=91, scale=1.2]{beamerposter}
-
-%\usepackage{uhb}
-%%\usecolortheme{msu}
+% change the orientation to landscape if needed
+\usepackage[orientation=portrait,size=a0paper,scale=1.0]{beamerposter}
+\usetheme{gemini}
+\usecolortheme{uhb}
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{tikz}
-\usepackage{biblatex}
-\addbibresource{poster.bib}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
-%\usepackage{anyfontsize}
-%
+\pgfplotsset{compat=1.14}
+\usepackage{anyfontsize}
+\usepackage[style=alphabetic,backend=biber]{biblatex}
+
 % ====================
 % Lengths
 % ====================
@@ -35,21 +37,21 @@
 % ====================
 % Title
 % ====================
+
 \title{Some fancy title: followed by some more text}
 
-\author{Your Name}
+\author{Alyssa P. Hacker \inst{1} \and Ben Bitdiddle \inst{2} \and Lem E. Tweakit \inst{2}}
 
-%\institute[shortinst]{Yale University}
+\institute[shortinst]{\inst{1} Some Institute \samelineand \inst{2} Another Institute}
 
 % ====================
 % Footer (optional)
 % ====================
 
-%\footercontent{
-%  \href{https://github.com}{Github: https://github.com} \hfill
-%Poster Session \hfill
-
-%  \href{mailto:youremail@yale.edu}{youremail@yale.edu}}
+\footercontent{
+  \href{https://www.example.com}{https://www.example.com} \hfill
+  ABC Conference 2025, New York --- XYZ-1234 \hfill
+  \href{mailto:alyssa.p.hacker@example.com}{alyssa.p.hacker@example.com}}
 % (can be left out to remove footer)
 
 % ====================
@@ -57,10 +59,8 @@
 % ====================
 
 % use this to include logos on the left and/or right side of the header:
-% Left: institution
-% \logoright{\includegraphics[height=8cm]{logos/logo.png}}
-% Right: funding agencies and other affilations 
-%\logoright{\includegraphics[height=7cm]{logos/NSF.eps}}
+% \logoright{\includegraphics[height=7cm]{logo1.pdf}}
+% \logoleft{\includegraphics[height=7cm]{logo2.pdf}}
 
 % ====================
 % Body
@@ -68,8 +68,8 @@
 
 \begin{document}
 
-\begin{frame}
-\begin{columns}
+\begin{frame}[t]
+\begin{columns}[t]
 \separatorcolumn
 
 \begin{column}{\colwidth}
@@ -80,7 +80,12 @@
 
     \begin{figure}
       \centering
-          \includegraphics[width=0.6\textwidth]{figures/results_fig.pdf}
+      \begin{tikzpicture}[scale=6]
+        \draw[step=0.25cm,color=gray] (-1,-1) grid (1,1);
+        \draw (1,0) -- (0.2,0.2) -- (0,1) -- (-0.2,0.2) -- (-1,0)
+          -- (-0.2,-0.2) -- (0,-1) -- (0.2,-0.2) -- cycle;
+      \end{tikzpicture}
+      \caption{A figure caption.}
     \end{figure}
 
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ultricies
@@ -90,49 +95,49 @@
     turpis condimentum urna, quis malesuada sapien arcu eu purus.
 
   \end{block}
-%
-%  \begin{block}{A block containing a list}
-%
-%    Nam vulputate nunc felis, non condimentum lacus porta ultrices. Nullam sed
-%    sagittis metus. Etiam consectetur gravida urna quis suscipit.
-%
-%    \begin{itemize}
-%      \item \textbf{Mauris tempor} risus nulla, sed ornare
-%      \item \textbf{Libero tincidunt} a duis congue vitae
-%      \item \textbf{Dui ac pretium} morbi justo neque, ullamcorper
-%    \end{itemize}
-%
-%    Eget augue porta, bibendum venenatis tortor.
-%
-%  \end{block}
-%
-%  \begin{alertblock}{A highlighted block}
-%
-%    This block catches your eye, so \textbf{important stuff} should probably go
-%    here.
-%
-%    Curabitur eu libero vehicula, cursus est fringilla, luctus est. Morbi
-%    consectetur mauris quam, at finibus elit auctor ac. Aliquam erat volutpat.
-%    Aenean at nisl ut ex ullamcorper eleifend et eu augue. Aenean quis velit
-%    tristique odio convallis ultrices a ac odio.
-%
-%    \begin{itemize}
-%      \item \textbf{Fusce dapibus tellus} vel tellus semper finibus. In
-%        consequat, nibh sed mattis luctus, augue diam fermentum lectus.
-%      \item \textbf{In euismod erat metus} non ex. Vestibulum luctus augue in
-%        mi condimentum, at sollicitudin lorem viverra.
-%      \item \textbf{Suspendisse vulputate} mauris vel placerat consectetur.
-%        Mauris semper, purus ac hendrerit molestie, elit mi dignissim odio, in
-%        suscipit felis sapien vel ex.
-%    \end{itemize}
-%
-%    Aenean tincidunt risus eros, at gravida lorem sagittis vel. Vestibulum ante
-%    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
-%
-%  \end{alertblock}
-%
+
+  \begin{block}{A block containing a list}
+
+    Nam vulputate nunc felis, non condimentum lacus porta ultrices. Nullam sed
+    sagittis metus. Etiam consectetur gravida urna quis suscipit.
+
+    \begin{itemize}
+      \item \textbf{Mauris tempor} risus nulla, sed ornare
+      \item \textbf{Libero tincidunt} a duis congue vitae
+      \item \textbf{Dui ac pretium} morbi justo neque, ullamcorper
+    \end{itemize}
+
+    Eget augue porta, bibendum venenatis tortor.
+
+  \end{block}
+
+  \begin{alertblock}{A highlighted block}
+
+    This block catches your eye, so \textbf{important stuff} should probably go
+    here.
+
+    Curabitur eu libero vehicula, cursus est fringilla, luctus est. Morbi
+    consectetur mauris quam, at finibus elit auctor ac. Aliquam erat volutpat.
+    Aenean at nisl ut ex ullamcorper eleifend et eu augue. Aenean quis velit
+    tristique odio convallis ultrices a ac odio.
+
+    \begin{itemize}
+      \item \textbf{Fusce dapibus tellus} vel tellus semper finibus. In
+        consequat, nibh sed mattis luctus, augue diam fermentum lectus.
+      \item \textbf{In euismod erat metus} non ex. Vestibulum luctus augue in
+        mi condimentum, at sollicitudin lorem viverra.
+      \item \textbf{Suspendisse vulputate} mauris vel placerat consectetur.
+        Mauris semper, purus ac hendrerit molestie, elit mi dignissim odio, in
+        suscipit felis sapien vel ex.
+    \end{itemize}
+
+    Aenean tincidunt risus eros, at gravida lorem sagittis vel. Vestibulum ante
+    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+
+  \end{alertblock}
+
 \end{column}
-%
+
 \separatorcolumn
 
 \begin{column}{\colwidth}
@@ -170,8 +175,19 @@
 
     \begin{figure}
       \centering
-        \includegraphics[width=0.3\textwidth]{figures/dag.png}
-
+      \begin{tikzpicture}
+        \begin{axis}[
+            scale only axis,
+            no markers,
+            domain=0:2*pi,
+            samples=100,
+            axis lines=center,
+            axis line style={-},
+            ticks=none]
+          \addplot[red] {sin(deg(x))};
+          \addplot[blue] {cos(deg(x))};
+        \end{axis}
+      \end{tikzpicture}
       \caption{Another figure caption.}
     \end{figure}
 
@@ -275,13 +291,18 @@
     commodo quam, non luctus nibh ullamcorper in. Class aptent taciti sociosqu
     ad litora torquent per conubia nostra, per inceptos himenaeos.
 
-
+    Nulla varius finibus volutpat. Mauris molestie lorem tincidunt, iaculis
+    libero at, gravida ante. Phasellus at felis eu neque suscipit suscipit.
+    Integer ullamcorper, dui nec pretium ornare, urna dolor consequat libero,
+    in feugiat elit lorem euismod lacus. Pellentesque sit amet dolor mollis,
+    auctor urna non, tempus sem.
 
   \end{block}
 
   \begin{block}{References}
 
-    \footnotesize{\bibliographystyle{plain}\bibliography{poster}}
+    \nocite{*}
+    \footnotesize{\printbibliography}
 
   \end{block}
 
