added mail, footer and readme change

--- a/poster.tex
+++ b/poster.tex
@@ -40,18 +40,18 @@
 
 \title{Some fancy title: followed by some more text}
 
-\author{Alyssa P. Hacker \inst{1} \and Ben Bitdiddle \inst{2} \and Lem E. Tweakit \inst{2}}
+\author{Linus Andrae\inst{1}}
 
-\institute[shortinst]{\inst{1} Some Institute \samelineand \inst{2} Another Institute}
+\institute[shortinst]{\inst{1} Institute for Environmental Physics, University of Bremen}
 
 % ====================
 % Footer (optional)
 % ====================
 
-\footercontent{
-  \href{https://www.example.com}{https://www.example.com} \hfill
-  ABC Conference 2025, New York --- XYZ-1234 \hfill
-  \href{mailto:alyssa.p.hacker@example.com}{alyssa.p.hacker@example.com}}
+\footercontent{%
+  \href{https://github.com/paradx/PresTPoster/poster.pdf}{The online version of this Poster: https://github.com/paradx/PresTPoster/poster.pdf} \hfill
+  PresT 2024, Bremen \hfill
+  \href{mailto:landrae@uni-bremen.de}{landrae@uni-bremen.de}}
 % (can be left out to remove footer)
 
 % ====================
