added logo and fixed footer

--- a/beamercolorthemeuhb.sty
+++ b/beamercolorthemeuhb.sty
@@ -55,7 +55,7 @@
 \setbeamercolor{structure}{fg=UHBBlue}
 
 % Headline
-\setbeamercolor{headline}{fg=white,bg=UHBDarkRed}
+\setbeamercolor{headline}{fg=UHBRed,bg=white}
 \setbeamercolor{headline rule}{bg=UHBLightRed}
 
 % Block
