--- a/poster.tex
+++ b/poster.tex
@@ -1,6 +1,3 @@
-% Gemini theme
-% https://github.com/anishathalye/gemini
-
 \documentclass[final]{beamer}
 
 % ====================
@@ -17,10 +14,10 @@
 \usepackage{booktabs}
 \usepackage{tikz}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.14}
+\pgfplotsset{compat=1.18}
 \usepackage{anyfontsize}
 \usepackage[style=alphabetic,backend=biber]{biblatex}
-
+\usepackage{wrapfig}
 % ====================
 % Lengths
 % ====================
@@ -49,9 +46,27 @@
 % ====================
 
 \footercontent{%
-  \href{https://github.com/paradx/PresTPoster/poster.pdf}{The online version of this Poster: https://github.com/paradx/PresTPoster/poster.pdf} \hfill
-  PresT 2024, Bremen \hfill
-  \href{mailto:landrae@uni-bremen.de}{landrae@uni-bremen.de}}
+
+  \begin{columns}[t]
+    \begin{column}{\colwidth+5cm}
+      \begin{wrapfigure}{l}{6cm}     
+        \centering
+        \vspace{-2cm}
+        \includegraphics[width=5cm]{figures/qrcode.eps}
+      \end{wrapfigure}
+      \href{https://github.com/paradx/PresTPoster/blob/main/poster.pdf}{The online version of this Poster: \\ https://github.com/paradx/PresTPoster/blob/main/poster.pdf} \vspace{1cm}
+    \end{column}
+    \begin{column}{\colwidth}
+      \vfill
+      PresT Winter Semester 2023/2024 \\ University Bremen \hfill
+    \end{column}
+    \separatorcolumn%
+    \begin{column}{\colwidth}
+      \vfill
+      \href{mailto:landrae@uni-bremen.de}{contact: landrae@uni-bremen.de}
+    \end{column}
+  \end{columns}
+  }
 % (can be left out to remove footer)
 
 % ====================
@@ -59,7 +74,7 @@
 % ====================
 
 % use this to include logos on the left and/or right side of the header:
-% \logoright{\includegraphics[height=7cm]{logo1.pdf}}
+\logoright{\includegraphics[height=5cm]{logos/logo}}
 % \logoleft{\includegraphics[height=7cm]{logo2.pdf}}
 
 % ====================
@@ -138,7 +153,7 @@
 
 \end{column}
 
-\separatorcolumn
+\separatorcolumn%
 
 \begin{column}{\colwidth}
 
