--- a/poster.tex
+++ b/poster.tex
@@ -35,7 +35,7 @@
 % Title
 % ====================
 
-\title{Some fancy title: followed by some more text}
+\title{Land Use Change and Climate Component on \newline Urban Heat Islands Development}
 
 \author{Linus Andrae\inst{1}}
 
