added block for image processing pipeline, added images

--- a/poster.bib
+++ b/poster.bib
@@ -7,3 +7,10 @@
   number = {3},
   pages = {379-423},
 }
+
+@misc{mediumgabor,
+  author = {Anuj Shah},
+  title ={Through The Eyes of Gabor Filter},
+  year = {2018},
+  url= {https://medium.com/@anuj_shah/through-the-eyes-of-gabor-filter-17d1fdb3ac97}
+}
