--- a/beamercolorthemeuhb.sty
+++ b/beamercolorthemeuhb.sty
@@ -56,6 +56,7 @@
 
 % Headline
 \setbeamercolor{headline}{fg=UHBRed,bg=white}
+\setbeamercolor{headline body}{fg=UHBRed,bg=white}
 \setbeamercolor{headline rule}{bg=UHBLightRed}
 
 % Block
