--- a/poster.tex
+++ b/poster.tex
@@ -1,4 +1,4 @@
-\documentclass[final]{beamer}
+\documentclass[final,20pt]{beamer}
 % ====================
 % Packages
 % ====================
@@ -6,12 +6,16 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 % change the orientation to landscape if needed
-\usepackage[orientation=portrait,size=a0paper,scale=1.0]{beamerposter}
+\usepackage[orientation=portrait,size=a0paper,scale=1.1]{beamerposter}
 \usetheme{gemini}
 \usecolortheme{uhb}
 \usepackage{graphicx}
+\usepackage{cleveref}
+\usepackage[protrusion=true,expansion]{microtype}
 \usepackage{booktabs}
 \usepackage{tikz}
+\usetikzlibrary{shapes.symbols}
+\usetikzlibrary{shapes.arrows}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 \usepackage{anyfontsize}
@@ -60,7 +64,8 @@
         \vspace{-2cm}
         \includegraphics[width=5cm]{figures/qrcode.eps}
       \end{wrapfigure}
-      \href{https://github.com/paradx/PresTPoster/blob/main/poster.pdf}{The online version of this Poster: \\ https://github.com/paradx/PresTPoster/blob/main/poster.pdf} \vspace{1cm}
+      \href{https://github.com/paradx/PresTPoster/blob/main/poster.pdf}{The online version of this Poster: \\%
+      https://github.com/paradx/PresTPoster/blob/main/poster.pdf} \vspace{1cm}
     \end{column}
     \begin{column}{\colwidth}
       \vfill
@@ -69,7 +74,9 @@
     \separatorcolumn%
     \begin{column}{\colwidth}
       \vfill
-      \href{mailto:landrae@uni-bremen.de}{contact: landrae@uni-bremen.de}
+      \href{mailto:landrae@uni-bremen.de}{contact: landrae@uni-bremen.de}\\
+      \vspace{1em}
+      Proudly made with \LaTeX%
     \end{column}
   \end{columns}
   }
@@ -78,10 +85,9 @@
 % ====================
 % Logo (optional)
 % ====================
-
 % use this to include logos on the left and/or right side of the header:
-\logoright{\includegraphics[height=5cm]{logos/logo}}
-\logoleft{\includegraphics[height=5cm]{logos/logoIUP.png}}
+\logoright{\includegraphics[height=5cm]{logos/logoIUP.png}}
+\logoleft{\includegraphics[height=5cm]{logos/logo}}
 
 % ===================
 % Configuration of blocks
@@ -130,226 +136,191 @@
 \begin{document}
 
 \begin{frame}[t]
-\vspace{1em}
-\tikz[remember picture, overlay] \node[opacity=0.3, yshift=-15mm] at (current page.center){\includegraphics[width=\textwidth,height=0.99\textheight]{figures/overlay}};
+\tikz[remember picture, overlay] \node[opacity=0.3, yshift=-1cm] at (current page.center){\includegraphics[width=\textwidth,height=0.99\textheight]{figures/overlay}};
 \begin{columns}[t]
 \separatorcolumn%
 
 \begin{column}{\colwidth}
 
-  \begin{block}{Abstract}
+  \begin{alertblock}{Introduction}
     Urban Heat Islands are a phenomena where the temperature within a city is significantly higher within an urban area, compared to the temperature of the surrounding rural area. \\
-    Detection using remote sensing data is used frequently. 
-    This Work adapted and combined different methods, to measure the impact of land use/ land cover change and longer term temperature changes on Urban Heat Islands in different European cities.
-    
-  \end{block}
+    \begin{itemize}
+      \item \textbf{Goal:} Detection of UHIs using Remote Sensing Satellite Data 
+      \item \textbf{Why} Measure impact of different factors over time 
+        \begin{itemize}
+          \item land cover change
+          \item temperature change 
+        \end{itemize}
+      \item \textbf{Output} Output factors and Indices of these factors on UHI severity and size
+    \end{itemize}
+  \end{alertblock}
+
+  \begin{exampleblock}{Urban Heat Islands}
+    \begin{itemize}
+      \item \textbf{Urban Heat Islands} (UHIs) $\rightarrow$ surface and air temperature within a city is higher then the average temperature of the surrounding
+      \item \textbf{Consequences} $\rightarrow$ Major health impact, increased pollution, reduced well-being 
+      \item \textbf{Measuring} $\rightarrow$ Remote Sensing data and local weather station measurements 
+    \end{itemize}
+  \end{exampleblock}
+
 
   \begin{exampleblock}{Processing Chain}
    The Image Processing Pipeline can be separated in these steps:
-    \begin{itemize}
+    \begin{enumerate}
+      \setlength\itemsep{1em}
       \item \textbf{Preprocessing} Cutting the image area to the Area of Interested
       \item \textbf{Feature Engineering} A Gabor filter bank of rotated Gabor kernels is used to enrich pixels with information about there place in larger structures of the image
       \item \textbf{Image Classification}  The pixels are classified using a random forest machine learning model that was trained using k-means based classification. 
       \item \textbf{Urban Area Detection} Classes indicating Urban Areas are identified and the buffer zones are build up around the areas to calculate a reference temperature.
-      \item \textbf{Peri-Urban Area Clean-up} Larger structures of small settlements are masked away from the surrounding areas
-      \item \textbf{Detection of Urban Heat Islands} Using the Thermal Infrared channels of Landsat, Urban heat islands are detected within the Urban Area, using a minimum threshold above the rural surrounding area.
-      \item \textbf{Statistical Analysis of UHIs} Pixel within the UHI and around are evaluated using land surface type, NDVI and NDBI indicies
-      \item \textbf{Timeline Creation} Repeating this process for different images of the same area over multiple years, change in extend and size and statistical composition of the UHIs can be analysed. This allows an inside in the impact of urbanisation and change in surface type on UHIs.
-      \item \textbf{Climate Change Impact} Estimation of the imapact of rising average temperatures is done by substracting the statistically significant impact of metrological and surface change on the size of urban heat islands and correlating the UHI size with measurement from weather stations in the area in question.
-    \end{itemize}
+      \item \textbf{Peri-Urban Area Clean-up} Larger settlement structures are masked away in the surrounding areas
+      \item \textbf{Detection of Urban Heat Islands} use thermal infrared channels to detect UHIs within the Urban Area
+      \item \textbf{Statistical Analysis of UHIs} Pixel within the UHI are evaluated using land surface type, NDVI and NDBI indices
+      \item \textbf{Timeline Creation} Repetition of the pipeline for different images of the same area over multiple years: 
+        \begin{itemize}
+          \setlength\itemsep{0em}
+          \item change in size of UHIs 
+          \item statistical composition of UHIs 
+        \end{itemize}
+      \setlength\itemsep{1em}
+      \item \textbf{Climate Change Impact} Estimation of the impact of rising average temperatures: 
+        \begin{itemize}
+          \setlength\itemsep{0em}
+          \item subtracting impact of metrological factors on size and intensity of UHIs
+          \item subtracting impact of surface change on size and intensity of UHIs
+        \end{itemize}
+      \setlength\itemsep{1em}
+      \item \textbf{Result} Correlating of UHI with climate and land use change 
+    \end{enumerate}
   \end{exampleblock}
-
-  \begin{block}{Feature Engineering}
-    
-     \begin{figure}
-       \begin{subfigure}{0.34\textwidth}
-      \centering
-      \includegraphics[width=\textwidth]{figures/gabor}
-      \subcaption{Gabor Filter Bank~\cite{mediumgabor}} 
-    \end{subfigure}
-    \begin{subfigure}{0.34\textwidth}
-      \centering
-      \includegraphics[width=\textwidth]{figures/features}
-      \subcaption{Features extracted from an image of the city of Bremen}
-    \end{subfigure}
-    \end{figure}
-
-  \end{block}
 
 \end{column}
 
 \separatorcolumn%
 
 \begin{column}{\colwidth}
-
-  \begin{block}{A block containing an enumerated list}
-
-    Vivamus congue volutpat elit non semper. Praesent molestie nec erat ac
-    interdum. In quis suscipit erat. \textbf{Phasellus mauris felis, molestie
-    ac pharetra quis}, tempus nec ante. Donec finibus ante vel purus mollis
-    fermentum. Sed felis mi, pharetra eget nibh a, feugiat eleifend dolor. Nam
-    mollis condimentum purus quis sodales. Nullam eu felis eu nulla eleifend
-    bibendum nec eu lorem. Vivamus felis velit, volutpat ut facilisis ac,
-    commodo in metus.
-
-    \begin{enumerate}
-      \item \textbf{Morbi mauris purus}, egestas at vehicula et, convallis
-        accumsan orci. Orci varius natoque penatibus et magnis dis parturient
-        montes, nascetur ridiculus mus.
-      \item \textbf{Cras vehicula blandit urna ut maximus}. Aliquam blandit nec
-        massa ac sollicitudin. Curabitur cursus, metus nec imperdiet bibendum,
-        velit lectus faucibus dolor, quis gravida metus mauris gravida turpis.
-      \item \textbf{Vestibulum et massa diam}. Phasellus fermentum augue non
-        nulla accumsan, non rhoncus lectus condimentum.
-    \end{enumerate}
-
-  \end{block}
-
-  \begin{block}{Fusce aliquam magna velit}
-
-    Et rutrum ex euismod vel. Pellentesque ultricies, velit in fermentum
-    vestibulum, lectus nisi pretium nibh, sit amet aliquam lectus augue vel
-    velit. Suspendisse rhoncus massa porttitor augue feugiat molestie. Sed
-    molestie ut orci nec malesuada. Sed ultricies feugiat est fringilla
-    posuere.
-
-    \begin{figure}
+  \begin{block}{Feature Engineering}
+  For adding information of surrounding larger scale structures to each pixels, for each image band the same bank of Gabor-filters was used. 
+  \begin{itemize}
+    \item \textbf{Gabor filter}$\rightarrow$ convolution of a sinosoid and a gaussian.
+    \item \textbf{parameter variation} $\sigma$ of gaussian, $\nu$, $\lambda$ and $\phi$ of sine
+    \item \textbf{Output} Detection of patterns, structures and textures in different orientations and sizes
+    \item \textbf{Additional information} one binary marker if pixel is part of larger structure
+  \end{itemize}
+  The filter used in \cref{fig:feats} was rotated \textbf{5} times. \\ 
+  Increasing the data from \textbf{8} color bands to \textbf{144} color and feature bands.
+     \begin{figure}
+       \begin{subfigure}{0.47\linewidth}
       \centering
-      \begin{tikzpicture}
-        \begin{axis}[
-            scale only axis,
-            no markers,
-            domain=0:2*pi,
-            samples=100,
-            axis lines=center,
-            axis line style={-},
-            ticks=none]
-          \addplot[red] {sin(deg(x))};
-          \addplot[blue] {cos(deg(x))};
-        \end{axis}
-      \end{tikzpicture}
-      \caption{Another figure caption.}
+      \includegraphics[width=0.9\linewidth]{figures/gabor}
+      \subcaption{Example filter bank of 16 rotated Gabor-kernels~\cite{mediumgabor}} 
+    \end{subfigure}
+    \begin{subfigure}{0.47\linewidth}
+      \centering
+      \includegraphics[width=0.85\linewidth]{figures/features}
+      \subcaption{Features extracted from an image of the city of Bremen\label{fig:feats}}
+    \end{subfigure}
     \end{figure}
-
   \end{block}
 
-  \begin{block}{Nam cursus consequat egestas}
+\begin{tikzpicture}
+  \node[overlay, remember picture, style=single arrow, fill=UHBRed, shape border rotate=270, minimum width=3cm , minimum height=2.6cm, yshift=2.2cm ,xshift=0.5\colwidth]{};
+\end{tikzpicture}
 
-    Nulla eget sem quam. Ut aliquam volutpat nisi vestibulum convallis. Nunc a
-    lectus et eros facilisis hendrerit eu non urna. Interdum et malesuada fames
-    ac ante \textit{ipsum primis} in faucibus. Etiam sit amet velit eget sem
-    euismod tristique. Praesent enim erat, porta vel mattis sed, pharetra sed
-    ipsum. Morbi commodo condimentum massa, \textit{tempus venenatis} massa
-    hendrerit quis. Maecenas sed porta est. Praesent mollis interdum lectus,
-    sit amet sollicitudin risus tincidunt non.
+  \begin{block}{Surface Classification}
+    Using K means the surface classes seen in \cref{fig:classes} where determined.
+    \vspace{-.6em}
+    \begin{figure}
+      \begin{subfigure}{0.9\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/classesBremen}
+        \subcaption{Surface type classification of Bremen and the surrounding area\label{fig:classes}} 
+      \end{subfigure}
 
-    Etiam sit amet tempus lorem, aliquet condimentum velit. Donec et nibh
-    consequat, sagittis ex eget, dictum orci. Etiam quis semper ante. Ut eu
-    mauris purus. Proin nec consectetur ligula. Mauris pretium molestie
-    ullamcorper. Integer nisi neque, aliquet et odio non, sagittis porta justo.
-
-    \begin{itemize}
-      \item \textbf{Sed consequat} id ante vel efficitur. Praesent congue massa
-        sed est scelerisque, elementum mollis augue iaculis.
-        \begin{itemize}
-          \item In sed est finibus, vulputate
-            nunc gravida, pulvinar lorem. In maximus nunc dolor, sed auctor eros
-            porttitor quis.
-          \item Fusce ornare dignissim nisi. Nam sit amet risus vel lacus
-            tempor tincidunt eu a arcu.
-          \item Donec rhoncus vestibulum erat, quis aliquam leo
-            gravida egestas.
-        \end{itemize}
-      \item \textbf{Sed luctus, elit sit amet} dictum maximus, diam dolor
-        faucibus purus, sed lobortis justo erat id turpis.
-      \item \textbf{Pellentesque facilisis dolor in leo} bibendum congue.
-        Maecenas congue finibus justo, vitae eleifend urna facilisis at.
-    \end{itemize}
-
+      \vspace{-0.2em}
+      \begin{subfigure}{0.9\textwidth}
+        \centering
+      \includegraphics[width=\textwidth]{figures/surroundingareas}
+      \subcaption{Bremen urban area and the rural buffer zones\label{fig:urban}}
+    \end{subfigure}
+    \vspace{-2cm}
+    \caption{Classification and urban area detection results}
+  \end{figure}
+  The Urban pixels where merged into a urban area with buffer and suburban zones (\cref{fig:urban}).\\
+  \vspace{-1.5em}
+  \begin{tikzpicture}
+   \node[overlay, style=single arrow, fill=UHBRed, shape border rotate=270, minimum width=3cm, minimum height=2.6cm, yshift=-2.5cm, xshift=0.5\linewidth]{};
+  \end{tikzpicture}
   \end{block}
-
 \end{column}
 
-\separatorcolumn
+\separatorcolumn%
 
 \begin{column}{\colwidth}
 
-  \begin{exampleblock}{A highlighted block containing some math}
-
-    A different kind of highlighted block.
-
-    $$
-    \int_{-\infty}^{\infty} e^{-x^2}\,dx = \sqrt{\pi}
-    $$
-
-    Interdum et malesuada fames $\{1, 4, 9, \ldots\}$ ac ante ipsum primis in
-    faucibus. Cras eleifend dolor eu nulla suscipit suscipit. Sed lobortis non
-    felis id vulputate.
-
-    \heading{A heading inside a block}
-
-    Praesent consectetur mi $x^2 + y^2$ metus, nec vestibulum justo viverra
-    nec. Proin eget nulla pretium, egestas magna aliquam, mollis neque. Vivamus
-    dictum $\mathbf{u}^\intercal\mathbf{v}$ sagittis odio, vel porta erat
-    congue sed. Maecenas ut dolor quis arcu auctor porttitor.
-
-    \heading{Another heading inside a block}
-
-    Sed augue erat, scelerisque a purus ultricies, placerat porttitor neque.
-    Donec $P(y \mid x)$ fermentum consectetur $\nabla_x P(y \mid x)$ sapien
-    sagittis egestas. Duis eget leo euismod nunc viverra imperdiet nec id
-    justo.
-
-  \end{exampleblock}
-
-  \begin{block}{Nullam vel erat at velit convallis laoreet}
-
-    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-    inceptos himenaeos. Phasellus libero enim, gravida sed erat sit amet,
-    scelerisque congue diam. Fusce dapibus dui ut augue pulvinar iaculis.
-
-    \begin{table}
+\begin{tikzpicture}
+   \node[overlay, style=single arrow, fill=UHBRed, shape border rotate=270, minimum width=3cm, minimum height=2.6cm, yshift=1.8cm ,xshift=0.5\colwidth]{};
+\end{tikzpicture}
+  
+\vspace{1em}
+  \begin{block}{UHI Detection}
+  \begin{figure}
       \centering
-      \begin{tabular}{l r r c}
-        \toprule
-        \textbf{First column} & \textbf{Second column} & \textbf{Third column} & \textbf{Fourth} \\
-        \midrule
-        Foo & 13.37 & 384,394 & $\alpha$ \\
-        Bar & 2.17 & 1,392 & $\beta$ \\
-        Baz & 3.14 & 83,742 & $\delta$ \\
-        Qux & 7.59 & 974 & $\gamma$ \\
-        \bottomrule
-      \end{tabular}
-      \caption{A table caption.}
-    \end{table}
-
-    Donec quis posuere ligula. Nunc feugiat elit a mi malesuada consequat. Sed
-    imperdiet augue ac nibh aliquet tristique. Aenean eu tortor vulputate,
-    eleifend lorem in, dictum urna. Proin auctor ante in augue tincidunt
-    tempor. Proin pellentesque vulputate odio, ac gravida nulla posuere
-    efficitur. Aenean at velit vel dolor blandit molestie. Mauris laoreet
-    commodo quam, non luctus nibh ullamcorper in. Class aptent taciti sociosqu
-    ad litora torquent per conubia nostra, per inceptos himenaeos.
-
-    Nulla varius finibus volutpat. Mauris molestie lorem tincidunt, iaculis
-    libero at, gravida ante. Phasellus at felis eu neque suscipit suscipit.
-    Integer ullamcorper, dui nec pretium ornare, urna dolor consequat libero,
-    in feugiat elit lorem euismod lacus. Pellentesque sit amet dolor mollis,
-    auctor urna non, tempus sem.
-
+      \includegraphics[width=0.9\textwidth]{figures/uhis}
+      \caption{Urban Heat Islands detected in Bremen (more then 1.5 $\sigma$ above average temp)\label{fig:uhis}}
+  \end{figure}
   \end{block}
 
-  \begin{block}{References}
+\vspace{1em}
+  \begin{tikzpicture}
+    \node[overlay, style=single arrow, fill=UHBRed, shape border rotate=270, minimum width=3cm , minimum height=2.6cm, yshift=2.5cm ,xshift=0.5\colwidth]{};
+  \end{tikzpicture}
 
+  \begin{block}{Analysis and Results}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\linewidth]{figures/PeriUrbanClassDistribution}
+        \caption{Statistical analysis of the Bremen surface type distribution within the peri urban area}
+    \end{figure}
+    \begin{itemize}
+      \setlength\itemsep{1em}
+      \item City area classification works well with a combined approach
+      \item Detecting Surface UHIs works well in different latitudes using Landsat 8 Satellite Images
+      \item Severity depends highly on surface type and weather
+      \item Climate Change and timeline analysis are currently a Work in Process (master thesis)
+    \end{itemize}
+  \end{block}
+
+ % \begin{block}{Next Steps}
+ %   \begin{itemize}
+ %     \item Time Line
+ %   \end{itemize}
+ % \end{block}
+
+  \begin{alertblock}{Summery}
+    \begin{itemize}
+      \setlength\itemsep{.2em}
+      \item Remote Sensing Data can Help with detection and monitoring of UHIs
+      \item UHIs pose a severe health risk
+      \item UHIs pose a severe environmental risk
+      \item Impact on humans will get worse with increased average temperatures
+      \item Mitigation needs multidisciplinary approach
+    \end{itemize}
+  \end{alertblock}
+
+  \begin{tikzpicture}
+    \node[remember picture, overlay, starburst, fill=UHBYellow, draw=UHBRed, minimum width=6cm, line width=2pt, minimum height=4cm, rotate=20, yshift=16cm, xshift=7.5cm] {\bf TL;DR: };
+  \end{tikzpicture}
+  \vspace{-2em}
+  \begin{block}{References}
     \nocite{*}
     \footnotesize{\printbibliography}
-
   \end{block}
 
 \end{column}
 
-\separatorcolumn
+\separatorcolumn%
 \end{columns}
 \end{frame}
 
 \end{document}
+% EOF
