--- a/poster.bib
+++ b/poster.bib
@@ -1,16 +1,6 @@
-@article{shannon1948communication,
-  author = {Claude E. Shannon},
-  title = {A Mathematical Theory of Communication},
-  journal = {Bell System Technical Journal},
-  year = 1948,
-  volume = {27},
-  number = {3},
-  pages = {379-423},
-}
-
 @misc{mediumgabor,
   author = {Anuj Shah},
   title ={Through The Eyes of Gabor Filter},
   year = {2018},
-  url= {https://medium.com/@anuj_shah/through-the-eyes-of-gabor-filter-17d1fdb3ac97}
+  url= {https://scribe.rip/\%40anuj_shah/through-the-eyes-of-gabor-filter-17d1fdb3ac97}
 }
