--- a/poster.tex
+++ b/poster.tex
@@ -10,8 +10,9 @@
 \usetheme{gemini}
 \usecolortheme{uhb}
 \usepackage{graphicx}
-\usepackage{cleveref}
+\usepackage[nameinlink]{cleveref}
 \usepackage[protrusion=true,expansion]{microtype}
+\usepackage[inkscapeformat=png]{svg}
 \usepackage{booktabs}
 \usepackage{tikz}
 \usetikzlibrary{shapes.symbols}
@@ -38,7 +39,8 @@
 \setlength{\blocksep}{0.05\pageheight}
 \setlength{\sepwidth}{0.025\paperwidth}
 \setlength{\colwidth}{0.3\paperwidth}
-
+% Uppercase Figure references 
+\crefname{figure}{Figure}{Figures}
 \newcommand{\separatorcolumn}{\begin{column}{\sepwidth}\end{column}}
 
 % ====================
@@ -62,21 +64,19 @@
       \begin{wrapfigure}{l}{6cm}     
         \centering
         \vspace{-2cm}
-        \includegraphics[width=5cm]{figures/qrcode.eps}
+        \includegraphics[width=5cm]{figures/qr-code}
       \end{wrapfigure}
-      \href{https://github.com/paradx/PresTPoster/blob/main/poster.pdf}{The online version of this Poster: \\%
-      https://github.com/paradx/PresTPoster/blob/main/poster.pdf} \vspace{1cm}
+      \href{https://github.com/paradx/PresTPoster/blob/main/poster.pdf?raw=true}{The online version of this Poster: \\%
+      https://github.com/paradx/PresTPoster/blob/main/poster.pdf?raw=true} \vspace{1cm}
     \end{column}
     \begin{column}{\colwidth}
       \vfill
-      PresT Winter Semester 2023/2024 \\ University Bremen \hfill
+        Master Thesis \\ University Bremen \hfill
     \end{column}
     \separatorcolumn%
     \begin{column}{\colwidth}
       \vfill
       \href{mailto:landrae@uni-bremen.de}{contact: landrae@uni-bremen.de}\\
-      \vspace{1em}
-      Proudly made with \LaTeX%
     \end{column}
   \end{columns}
   }
@@ -87,7 +87,7 @@
 % ====================
 % use this to include logos on the left and/or right side of the header:
 \logoright{\includegraphics[height=5cm]{logos/logoIUP.png}}
-\logoleft{\includegraphics[height=5cm]{logos/logo}}
+\logoleft{\includegraphics[height=5cm]{logos/logoDC.png}}
 
 % ===================
 % Configuration of blocks
@@ -143,55 +143,44 @@
 \begin{column}{\colwidth}
 
   \begin{alertblock}{Introduction}
-    Urban Heat Islands are a phenomena where the temperature within a city is significantly higher within an urban area, compared to the temperature of the surrounding rural area. \\
-    \begin{itemize}
-      \item \textbf{Goal:} Detection of UHIs using Remote Sensing Satellite Data 
-      \item \textbf{Why} Measure impact of different factors over time 
-        \begin{itemize}
-          \item land cover change
-          \item temperature change 
-        \end{itemize}
-      \item \textbf{Output} Output factors and Indices of these factors on UHI severity and size
+    Urban Heat Islands are a phenomenon, where the temperature within a city is significantly higher compared to the temperature of the surrounding rural area. \\
+    \begin{itemize}\setlength{\itemsep}{0.5em}
+      \item \textbf{Goal:} Detection and Analysis of UHIs using Landsat 8 \& 9 Satellite Data:
+      \item \textbf{Why} Find influencing factors on size and impact of urbanisation and climate change of UHIs
+      \item \textbf{Output} Find factors that influence UHI severity and size. Determine what indices are useful for judging impact of UHI on human health
     \end{itemize}
   \end{alertblock}
 
   \begin{exampleblock}{Urban Heat Islands}
-    \begin{itemize}
-      \item \textbf{Urban Heat Islands} (UHIs) $\rightarrow$ surface and air temperature within a city is higher then the average temperature of the surrounding
+    \begin{itemize}\setlength{\itemsep}{0.5em}
+      \item \textbf{Urban Heat Islands} (UHIs) $\rightarrow$ Surface and air temperature within a city is higher than the average temperature of the surrounding area.
       \item \textbf{Consequences} $\rightarrow$ Major health impact, increased pollution, reduced well-being 
-      \item \textbf{Measuring} $\rightarrow$ Remote Sensing data and local weather station measurements 
+      \item \textbf{Measurement Technique} $\rightarrow$ Remote sensing data for Surface UHIs and local weather station measurements for Atmospheric UHIs
     \end{itemize}
   \end{exampleblock}
 
 
-  \begin{exampleblock}{Processing Chain}
+  \begin{block}{Processing Chain}
    The Image Processing Pipeline can be separated in these steps:
     \begin{enumerate}
-      \setlength\itemsep{1em}
-      \item \textbf{Preprocessing} Cutting the image area to the Area of Interested
-      \item \textbf{Feature Engineering} A Gabor filter bank of rotated Gabor kernels is used to enrich pixels with information about there place in larger structures of the image
-      \item \textbf{Image Classification}  The pixels are classified using a random forest machine learning model that was trained using k-means based classification. 
-      \item \textbf{Urban Area Detection} Classes indicating Urban Areas are identified and the buffer zones are build up around the areas to calculate a reference temperature.
+      \setlength\itemsep{0.5em}
+      \item \textbf{Preprocessing} Cutting the image area to the area of interested
+      \item \textbf{Feature Engineering} A Gabor filter bank of rotated Gabor kernels is used to enrich pixels with information about surrounding pixel and larger structures.
+      \item \textbf{Image Classification}  The pixels are classified using a k-means based classification. 
+      \item \textbf{Urban Area Detection} Classes indicating urban areas are identified and the buffer zones are build up around the areas to calculate a reference temperature.
       \item \textbf{Peri-Urban Area Clean-up} Larger settlement structures are masked away in the surrounding areas
-      \item \textbf{Detection of Urban Heat Islands} use thermal infrared channels to detect UHIs within the Urban Area
-      \item \textbf{Statistical Analysis of UHIs} Pixel within the UHI are evaluated using land surface type, NDVI and NDBI indices
-      \item \textbf{Timeline Creation} Repetition of the pipeline for different images of the same area over multiple years: 
+      \item \textbf{Detection of Urban Heat Islands} using thermal infrared images to detect UHIs within the Urban Area
+      \item \textbf{Statistical Analysis of UHIs} Pixel within the UHI are evaluated using land surface type, NDVI and NDBI as well as LST values 
+      \item \textbf{Timeline Creation} Repetition of the pipeline for different images of the same area over multiple years:
         \begin{itemize}
-          \setlength\itemsep{0em}
+          \setlength\itemsep{0.5em}
           \item change in size of UHIs 
           \item statistical composition of UHIs 
         \end{itemize}
-      \setlength\itemsep{1em}
-      \item \textbf{Climate Change Impact} Estimation of the impact of rising average temperatures: 
-        \begin{itemize}
-          \setlength\itemsep{0em}
-          \item subtracting impact of metrological factors on size and intensity of UHIs
-          \item subtracting impact of surface change on size and intensity of UHIs
-        \end{itemize}
-      \setlength\itemsep{1em}
+      \setlength\itemsep{0.5em}
       \item \textbf{Result} Correlating of UHI with climate and land use change 
     \end{enumerate}
-  \end{exampleblock}
+  \end{block}
 
 \end{column}
 
@@ -201,24 +190,26 @@
   \begin{block}{Feature Engineering}
   For adding information of surrounding larger scale structures to each pixels, for each image band the same bank of Gabor-filters was used. 
   \begin{itemize}
+          \setlength\itemsep{0.5em}
     \item \textbf{Gabor filter}$\rightarrow$ convolution of a sinosoid and a gaussian.
     \item \textbf{parameter variation} $\sigma$ of gaussian, $\nu$, $\lambda$ and $\phi$ of sine
     \item \textbf{Output} Detection of patterns, structures and textures in different orientations and sizes
     \item \textbf{Additional information} one binary marker if pixel is part of larger structure
   \end{itemize}
-  The filter used in \cref{fig:feats} was rotated \textbf{5} times. \\ 
-  Increasing the data from \textbf{8} color bands to \textbf{144} color and feature bands.
+  The result of the convolution of the filter in \cref{fig:filter} with an Landsat 8 image is shown in \cref{fig:feats}. \\ 
      \begin{figure}
        \begin{subfigure}{0.47\linewidth}
       \centering
-      \includegraphics[width=0.9\linewidth]{figures/gabor}
-      \subcaption{Example filter bank of 16 rotated Gabor-kernels~\cite{mediumgabor}} 
+      \includegraphics[width=0.9\linewidth]{figures/K5.png}
+      \subcaption{Example filter bank of 90\textdegree\ rotated Gabor-kernel with $\sigma = 2$, $f = 0.15$\label{fig:filter}} 
     \end{subfigure}
     \begin{subfigure}{0.47\linewidth}
       \centering
-      \includegraphics[width=0.85\linewidth]{figures/features}
+      \includegraphics[width=0.85\linewidth]{figures/Features_2_015_90.png}
       \subcaption{Features extracted from an image of the city of Bremen\label{fig:feats}}
     \end{subfigure}
+    \vspace{-0.2em}
+    \caption{Gabor Filter kernels and convoluted image}
     \end{figure}
   \end{block}
 
@@ -227,25 +218,25 @@
 \end{tikzpicture}
 
   \begin{block}{Surface Classification}
-    Using K means the surface classes seen in \cref{fig:classes} where determined.
+    Using k-means the surface classes seen in \cref{fig:classes} were determined.
     \vspace{-.6em}
     \begin{figure}
       \begin{subfigure}{0.9\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{figures/classesBremen}
+        \includegraphics[width=\textwidth]{figures/Classification.png}
         \subcaption{Surface type classification of Bremen and the surrounding area\label{fig:classes}} 
       \end{subfigure}
 
       \vspace{-0.2em}
       \begin{subfigure}{0.9\textwidth}
         \centering
-      \includegraphics[width=\textwidth]{figures/surroundingareas}
+      \includegraphics[width=0.8\textwidth]{figures/UrbanAreaBremen.png}
       \subcaption{Bremen urban area and the rural buffer zones\label{fig:urban}}
     \end{subfigure}
     \vspace{-2cm}
     \caption{Classification and urban area detection results}
   \end{figure}
-  The Urban pixels where merged into a urban area with buffer and suburban zones (\cref{fig:urban}).\\
+  The urban pixels were merged into a continuous urban area with suburban and rural influence zones (\cref{fig:urban}).\\
   \vspace{-1.5em}
   \begin{tikzpicture}
    \node[overlay, style=single arrow, fill=UHBRed, shape border rotate=270, minimum width=3cm, minimum height=2.6cm, yshift=-2.5cm, xshift=0.5\linewidth]{};
@@ -261,16 +252,16 @@
    \node[overlay, style=single arrow, fill=UHBRed, shape border rotate=270, minimum width=3cm, minimum height=2.6cm, yshift=1.8cm ,xshift=0.5\colwidth]{};
 \end{tikzpicture}
   
-\vspace{1em}
+\vspace{0.5em}
   \begin{block}{UHI Detection}
   \begin{figure}
       \centering
-      \includegraphics[width=0.9\textwidth]{figures/uhis}
-      \caption{Urban Heat Islands detected in Bremen (more then 1.5 $\sigma$ above average temp)\label{fig:uhis}}
+      \includegraphics[width=0.9\textwidth]{figures/UHIs_Bremen_2022-06-21_s:3.png}
+      \caption{Urban Heat Islands detected in Bremen (more then 3 $\sigma$ above average temp)\label{fig:uhis}}
   \end{figure}
   \end{block}
 
-\vspace{1em}
+\vspace{0.5em}
   \begin{tikzpicture}
     \node[overlay, style=single arrow, fill=UHBRed, shape border rotate=270, minimum width=3cm , minimum height=2.6cm, yshift=2.5cm ,xshift=0.5\colwidth]{};
   \end{tikzpicture}
@@ -278,11 +269,11 @@
   \begin{block}{Analysis and Results}
     \begin{figure}
         \centering
-        \includegraphics[width=\linewidth]{figures/PeriUrbanClassDistribution}
+        \includegraphics[width=\linewidth]{figures/ClassDistributionPU2019-06-29.png}
         \caption{Statistical analysis of the Bremen surface type distribution within the peri urban area}
     \end{figure}
     \begin{itemize}
-      \setlength\itemsep{1em}
+      \setlength\itemsep{0.5em}
       \item City area classification works well with a combined approach
       \item Detecting Surface UHIs works well in different latitudes using Landsat 8 Satellite Images
       \item Severity depends highly on surface type and weather
@@ -298,7 +289,7 @@
 
   \begin{alertblock}{Summery}
     \begin{itemize}
-      \setlength\itemsep{.2em}
+      \setlength\itemsep{0.5em}
       \item Remote Sensing Data can Help with detection and monitoring of UHIs
       \item UHIs pose a severe health risk
       \item UHIs pose a severe environmental risk
@@ -307,13 +298,12 @@
     \end{itemize}
   \end{alertblock}
 
-  \begin{tikzpicture}
-    \node[remember picture, overlay, starburst, fill=UHBYellow, draw=UHBRed, minimum width=6cm, line width=2pt, minimum height=4cm, rotate=20, yshift=16cm, xshift=7.5cm] {\bf TL;DR: };
-  \end{tikzpicture}
-  \vspace{-2em}
-  \begin{block}{References}
-    \nocite{*}
-    \footnotesize{\printbibliography}
+  \begin{block}{Reference}
+    Read the full work here:\\
+      %\href{https://github.com/paradx/mscthesis/releases/download/printed/thesis_singleSided.pdf}{https://github.com/paradx/mscthesis/releases/download/printed/thesis_singleSided.pdf}
+       \vspace{1cm}
+%    \nocite{*}
+%    \footnotesize{\printbibliography}
   \end{block}
 
 \end{column}
